--- a/projects.html
+++ b/projects.html
@@ -34,38 +34,15 @@
 				<section class="gallery-area section-gap">
 					<div class="container container-gallery">
 						<ul class="row project-row">
-							<li><img class="img-fluid" src="interiormaster_resized/1.Home_page_hol.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/2.Hol.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/3.Hol.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/4.Desi_living_room.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/5.Desi_living_room.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/6.Desi_living_room.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/7.Desi_bedroom.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/8.Desi_bedroom.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/9.Desi_bedroom.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/10.Desi_bedroom.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/11.Kids_room.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/12.Kids_room.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/13.Kids_room.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/14.Bathroom.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/15.Bathroom.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/16.Bathroom.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/office_1.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/office_2.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/office_3.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/office_4.png" alt=""></li>
-							<li><img class="img-fluid" src="interiormaster_resized/18.Toilet.png" alt=""></li>
-							<li><img class="img-fluid" src="interiormaster_resized/19.Toilet.png" alt=""></li>
-							<li>
-								<div id="seven">
-									<img class="img-fluid" src="interiormaster_resized/17.Toilet.png" alt="" id="sevn">
-								</div>
-							</li>
-							<li><img  class="img-fluid" src="interiormaster_resized/20.Inspiration_1.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/23.Inspiration_2.png"></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/24.Inspiration_3.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/22.Inspiration_4.png" alt=""></li>
-							<li><img  class="img-fluid" src="interiormaster_resized/21.Inspiration_5.png" alt=""></li>
+							<li><img  class="img-fluid" src="interiormaster_resized/verne.jpeg" alt=""></li>
+							<li><img  class="img-fluid" src="interiormaster_resized/stephking.jpeg" alt=""></li>
+							<li><img  class="img-fluid" src="interiormaster_resized/orwell.jpeg" alt=""></li>
+							<li><img  class="img-fluid" src="interiormaster_resized/janeausten.jpeg" alt=""></li>
+							<li><img  class="img-fluid" src="interiormaster_resized/herbfranke.jpeg" alt=""></li>
+							<li><img  class="img-fluid" src="interiormaster_resized/gabmarquez.jpeg" alt=""></li>
+							<li><img class="img-fluid" src="interiormaster_resized/tolkien.jpeg" alt=""></li>
+							<li><img class="img-fluid" src="interiormaster_resized/tolstoy.jpeg" alt=""></li>
+							<li><img class="img-fluid" src="interiormaster_resized/agchristie.jpeg" alt=""></li>
 						</ul>
 					</div>	
 				</section>
